# ocrarian.py

./: .gitignore  README.md  pyproject.toml
ocrarian/: __init__.py  __main__.py  app.py
ocrarian/classes/: google_drive.py
ocrarian/common/: config.py  exceptions.py  export_types.py  google_drive.py
ocrarian/common/file_manager/: config.py  exceptions.py  file_manager.py
ocrarian/common/gdocs_client/: exceptions.py  google_docs_client.py  settings.py
ocrarian/common/types/: auth_methods.py  export_types.py  supported_types.py
