[tool.poetry]
name = "ocrarian"
version = "0.0.1"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.7.11"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
appdirs = {git = "https://github.com/Qu4tro/appdirs"}
filetype = "^1.0.6"
pypdf2 = "^1.26.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
