[tool.poetry]
name = "ocrarian"
version = "0.0.1"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^1.12.0"
google-auth-oauthlib = "^0.8.0"
appdirs = {git = "https://github.com/Qu4tro/appdirs"}
filetype = "^1.0.6"
pypdf2 = "^1.26.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
